<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<groupId>org.sunbird</groupId>
	<artifactId>lms-service</artifactId>
	<name>lms-service</name>
	<packaging>play2</packaging>
	<version>1.0-SNAPSHOT</version>
	<modelVersion>4.0.0</modelVersion>
	<repositories>
		<repository>
			<id>scalaz-bintray</id>
			<name>Scalaz Bintray - releases</name>
			<url>https://dl.bintray.com/scalaz/releases/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>typesafe-releases-plugins</id>
			<url>https://repo.typesafe.com/typesafe/releases/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	<properties>
		<play2.version>2.7.2</play2.version>
		<play2.plugin.version>1.0.0-rc5</play2.plugin.version>
		<sbt-compiler.plugin.version>1.0.0</sbt-compiler.plugin.version>
		<scala.major.version>2.11</scala.major.version>
		<scala.version>2.11.12</scala.version>
		<mockito.core.version>2.22.0</mockito.core.version>
		<powermock.api.mockito2.version>2.0.7</powermock.api.mockito2.version>
		<powermock.module.junit4.version>2.0.0-beta.5</powermock.module.junit4.version>
	</properties>

	<dependencies>
		<!-- Don't move this dependency below play dependency otherwise it will 
			be overriden by play jackson jar, which uses older version -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.10.1</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play-guice_${scala.major.version}</artifactId>
			<version>${play2.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.google.inject</groupId>
					<artifactId>guice</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.inject.extensions</groupId>
		    		<artifactId>guice-assistedinject</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>4.2.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.inject.extensions/guice-assistedinject -->
		<dependency>
		    <groupId>com.google.inject.extensions</groupId>
		    <artifactId>guice-assistedinject</artifactId>
		    <version>3.0</version>
		</dependency>
		
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play-netty-server_${scala.major.version}</artifactId>
			<version>${play2.version}</version>
			<scope>runtime</scope>
		</dependency>
		<!-- Add actor here itself to avoid netty jar conflict. -->
		<dependency>
            <groupId>org.sunbird</groupId>
            <artifactId>course-actors-common</artifactId>
            <version>1.0-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<artifactId>cassandra-unit</artifactId>
					<groupId>org.cassandraunit</groupId>
				</exclusion>
			</exclusions>
		</dependency>
        <dependency>
            <groupId>org.sunbird</groupId>
            <artifactId>course-actors</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
		<dependency>
			<groupId>org.sunbird</groupId>
			<artifactId>collection-actors</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
        <dependency>
            <groupId>org.sunbird</groupId>
            <artifactId>textbook-actors</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
		<dependency>
			<groupId>org.sunbird</groupId>
			<artifactId>enrolment-actor</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.sunbird</groupId>
			<artifactId>sunbird-commons</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
			<!--<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.6.0</version>
		</dependency>-->
		<dependency>
			<groupId>com.typesafe</groupId>
			<artifactId>config</artifactId>
			<version>1.3.0</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play_${scala.major.version}</artifactId>
			<version>${play2.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.fasterxml.jackson.core</groupId>
					<artifactId>jackson-core</artifactId>
				</exclusion>
				<exclusion>
					<groupId>joda-time</groupId>
					<artifactId>joda-time</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.guava</groupId>
					<artifactId>guava</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>filters-helpers_${scala.major.version}</artifactId>
			<version>${play2.version}</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play-akka-http-server_${scala.major.version}</artifactId>
			<version>${play2.version}</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play-specs2_${scala.major.version}</artifactId>
			<version>${play2.version}</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>com.google.code.gson</groupId>
					<artifactId>gson</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.guava</groupId>
					<artifactId>guava</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play-logback_${scala.major.version}</artifactId>
			<version>${play2.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-library</artifactId>
			<version>${scala.version}</version>
		</dependency>

		<!-- required for IntegrationSpec -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.1</version>
		</dependency>

		<dependency>
			<groupId>com.typesafe.akka</groupId>
			<artifactId>akka-testkit_${scala.major.version}</artifactId>
			<version>2.5.22</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.core.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito2</artifactId>
			<version>${powermock.api.mockito2.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>${powermock.module.junit4.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.danielwegener</groupId>
			<artifactId>logback-kafka-appender</artifactId>
			<version>0.2.0-RC2</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.3</version>
		</dependency>
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
			<version>6.6</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.25</version>
		</dependency>
	</dependencies>
	<build>
		<sourceDirectory>${basedir}/app</sourceDirectory>
		<testSourceDirectory>${basedir}/test</testSourceDirectory>
		<resources>
			<resource>
				<directory>${basedir}/conf</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.google.code.play2-maven-plugin</groupId>
				<artifactId>play2-maven-plugin</artifactId>
				<version>${play2.plugin.version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>com.google.code.sbt-compiler-maven-plugin</groupId>
				<artifactId>sbt-compiler-maven-plugin</artifactId>
				<version>${sbt-compiler.plugin.version}</version>
				<configuration>
					<scalacOptions>-feature -deprecation -Xfatal-warnings</scalacOptions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<useSystemClassLoader>false</useSystemClassLoader>
					<forkCount>0</forkCount>
					<argLine>
						--illegal-access=warn
					</argLine>
					<argLine>@{argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
					<includes>
						<include>**/*Spec.java</include>
						<include>**/*Test.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.5</version>
				<executions>
					<execution>
						<id>default-prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>default-report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
					<execution>
						<id>report-aggregate</id>
						<phase>verify</phase>
						<goals>
							<goal>report-aggregate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>

